# picOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SDK.md  TODO.md
.github/workflows/: release.yml
apps/3dtest/: app.json  main.lua
apps/graphicstest/: app.json  main.lua
apps/image_viewer/: main.lua
apps/systest/: main.lua
src/: hardware.h  lwipopts.h  main.c
src/drivers/: display.c  display.h  http.c  keyboard.c  wifi.c  wifi.h
src/os/: clock.c  clock.h  config.c  config.h  file_browser.c  file_browser.h  image_decoders.cpp  image_decoders.h  launcher.c  lua_bridge.c  lua_bridge_fs.c  lua_bridge_sys.c  lua_psram_alloc.c  lua_psram_alloc.h  os.h  system_menu.c  text_input.c  text_input.h  ui.c  ui.h  umm_malloc_cfgport.h
src/usb/: usb_msc.c
